New Project, Fix
Completely new project with refixes, re done the old one project but fixed the old mistake.
still the container app-php is still having troubles.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,7 @@
 security:
-    firewalls:
-        public:
-            pattern: ^/(css|js|images|favicon.ico)
-            security: false
-
-        main:
-            pattern: ^/
-            form_login:
-                login_path: login
-                check_path: login
-            logout:
-                path: logout
-
-            security: true
+    password_hashers:
+        App\Entity\User:
+            algorithm: auto
 
     providers:
         app_user_provider:
@@ -20,7 +9,21 @@ security:
                 class: App\Entity\User
                 property: email
 
-    password_hashers:
-        App\Entity\User:
-            algorithm: bcrypt
-            cost: 12
+    firewalls:
+        public:
+            pattern: ^/(css|js|images|favicon.ico)
+            security: false
+
+        main:
+            pattern: ^/
+            stateless: false
+            provider: app_user_provider
+            custom_authenticators:
+                - App\Security\LoginAuthenticator
+            form_login:
+                login_path: /login
+                check_path: /login
+                enable_csrf: false
+            logout:
+                path: /logout
+
