--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,12 @@
 services:
     php:
         image: ${IMAGES_PREFIX:-}app-php
-        # restart: unless-stopped
+        restart: unless-stopped
         environment:
             SERVER_NAME: ${SERVER_NAME:-localhost}, php:80
             MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
             MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
-            DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@database:5432/${POSTGRES_DB:-app}?serverVersion=${POSTGRES_VERSION:-16}&charset=${POSTGRES_CHARSET:-utf8}
+            DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=${POSTGRES_VERSION:-15}&charset=${POSTGRES_CHARSET:-utf8}
             MERCURE_URL: ${CADDY_MERCURE_URL:-http://php/.well-known/mercure}
             MERCURE_PUBLIC_URL: ${CADDY_MERCURE_PUBLIC_URL:-https://${SERVER_NAME:-localhost}/.well-known/mercure}
             MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
@@ -28,6 +28,7 @@ services:
     
     adminer:
         image: adminer
+        restart: always
         ports:
             - 8080:8080
         networks:
@@ -36,16 +37,18 @@ services:
     database:
         image: postgres:${POSTGRES_VERSION:-16}-alpine
         environment:
-            POSTGRES_DB: ${POSTGRES_DB:-app}
+            POSTGRES_DB: ${POSTGRES_DB:-postgres}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
             POSTGRES_USER: ${POSTGRES_USER:-postgres}
         healthcheck:
-            test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB:-app}", "-U", "${POSTGRES_USER:-postgres}"]
+            test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB:-postgres}", "-U", "${POSTGRES_USER:-postgres}"]
             timeout: 5s
             retries: 5
             start_period: 60s
         volumes:
             - database_data:/var/lib/postgresql/data
+        ports:
+            - "5432:5432"
         networks:
             - app_network
 
