--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,13 @@
         "symfony/flex": "^2.4.7",
         "symfony/framework-bundle": "7.2.*",
         "symfony/http-kernel": "7.2.*",
-        "symfony/runtime": "^6.0",
+        "symfony/mime": "7.2.*",
+        "symfony/property-access": "7.2.*",
+        "symfony/runtime": "7.2.*",
         "symfony/security-bundle": "7.2.*",
+        "symfony/security-core": "7.2.*",
+        "symfony/serializer": "7.2.*",
         "symfony/yaml": "7.2.*"
-
     },
     "config": {
         "allow-plugins": {
@@ -86,6 +89,7 @@
         "friends-of-behat/symfony-extension": "^2.6",
         "phpunit/phpunit": "^11.5.6",
         "symfony/browser-kit": "7.2.*",
-        "symfony/maker-bundle": "^1.62.1"
+        "symfony/maker-bundle": "^1.62.1",
+        "symfony/phpunit-bridge": "^7.2"
     }
 }
