--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,4 +9,15 @@ error:
     controller: App\Controller\ErrorController
     methods: [POST, GET]
 
- 
+app_login:
+    path: /login
+    controller: App\Controller\UserController::login
+    
+app_register:
+    path: /register
+    controller: App\Controller\UserController::register
+
+home:
+    path: /
+    controller: App\Controller\HomeController::index
+    
